--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -11,7 +11,7 @@
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
+    This friendly message is coming from: moi
     <ul>
         <li>Your controller at <code>/var/www/sae301/src/Controller/AccueilController.php</code></li>
         <li>Your template at <code>/var/www/sae301/templates/accueil/index.html.twig</code></li>
