--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,11 +30,12 @@
             height: 10vh;
         }
     </style>
+    {% endblock %}
     <body>
         {% block body %}
-        <div>
-            Hello World!
-        </div>
+            <div>
+                Hello World!
+            </div>
         {% endblock %}
     </body>
 </html>
