--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -3,18 +3,15 @@
 {% block title %}Accueil{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <section class="hero">
+        <div class="hero-image-wrapper">
+            <img id="hero" src="{{ asset('images/hero.svg') }}" alt="Image hero">
+        </div>
+        <a href="#" class="hero-button">
+            <p>Réserver ma séance</p>
+        </a>
+    </section>
+    <section class="acc2">
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from: moi
-    <ul>
-        <li>Your controller at <code>/var/www/sae301/src/Controller/AccueilController.php</code></li>
-        <li>Your template at <code>/var/www/sae301/templates/accueil/index.html.twig</code></li>
-    </ul>
-</div>
+    </section>
 {% endblock %}
