--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+        <link rel="icon" href="{{ asset('images/logo.svg') }}">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
         {% block stylesheets %}
         {% endblock %}
 
@@ -12,30 +15,17 @@
         {% endblock %}
     </head>
     <header>
-        <nav>
-            <div class="logo">
-                <a href="/"></a>
-            </div>
+        <div>
+            <a href="/"><img id="logo" src="{{ asset('images/logo.svg') }}"></a>
             <div>
                 <a href="/">Accueil</a>
                 <a href="#">Reservation</a>
                 <a href="#">Blog</a>
-                <a href="/back">Back-office</a>
+                <a href="#">Back-office</a>
             </div>
-        </nav>
+        </div>
     </header>
-    {% block style %}
-    <style>
-        header {
-            height: 10vh;
-        }
-    </style>
-    {% endblock %}
     <body>
-        {% block body %}
-            <div>
-                Hello World!
-            </div>
-        {% endblock %}
+        {% block body %}{% endblock %}
     </body>
 </html>
