Avancé sur Accueil

--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <section class="hero">
-        <div class="hero-image-wrapper">
+        <div>
             <img id="hero" src="{{ asset('images/hero.svg') }}" alt="Image hero">
         </div>
         <a href="#" class="hero-button">
@@ -12,6 +12,15 @@
         </a>
     </section>
     <section class="acc2">
-
+        <div>
+            <div></div>
+            <div>
+                <h1>Helloo,</h1>
+                <p>”Moi c’est Klara, j’ai 23 ans et je suis passionnée par le nail art depuis 2022. J’ai créé Nail’s Pro pour offrir aux femmes un moment de beauté, de détente et de confiance… directement chez elles.”</p>
+            </div>
+        </div>
+        <div>
+            <p>Si vous habitez Troyes ou les communes voisines (La Chapelle-Saint-Luc, Saint-André-les-Vergers, Pont-Sainte-Marie, Sainte-Savine, Rosières-près-Troyes…), je viens avec plaisir prendre soin de vos mains et sublimer vos ongles selon vos envies.</p>
+        </div>
     </section>
 {% endblock %}
