--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -76,5 +76,49 @@ a {
     font-size: 40px;
 }
 
+
 .acc2 {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.acc2 > div {
+    display: flex;
+    margin-top: 50px;
+    flex-direction: row;
+    align-items: center;
+    gap: 20px;
+    width: 80%;
+    justify-content: space-between;
+}
+
+.acc2 div div:nth-child(1) {
+    display: flex;
+    width: 50%;
+    flex-direction: column;
+    justify-content: center;
+    background: url("../images/nails.png") no-repeat center;
+    background-size: cover;
+    width: 600px;
+    aspect-ratio: 1 / 1;
+}
+
+.acc2 div div:nth-child(2) {
+    width: 40%;
+}
+
+.acc2 div div:nth-child(2) h1{
+    font-size: 65px;
+    margin-bottom: 0;
+}
+
+.acc2 div div p{
+    font-size: 45px;
+    font-style: italic;
+}
+
+.acc2 div p {
+    font-size: 35px;
 }
