Section 3 "Mes services"

--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -23,4 +23,7 @@
             <p>Si vous habitez Troyes ou les communes voisines (La Chapelle-Saint-Luc, Saint-André-les-Vergers, Pont-Sainte-Marie, Sainte-Savine, Rosières-près-Troyes…), je viens avec plaisir prendre soin de vos mains et sublimer vos ongles selon vos envies.</p>
         </div>
     </section>
+    <section class="acc3">
+        <h1>Mes Services</h1>
+    </section>
 {% endblock %}
