--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,4 +28,24 @@
 <body>
 {% block body %}{% endblock %}
 </body>
+<footer>
+    <div>
+        <div>
+            <img class="picto" src="{{ asset('images/ytb.svg') }}">
+            <a href="#">naislpro_K</a>
+        </div>
+        <div>
+            <img class="picto" src="{{ asset('images/fb.svg') }}">
+            <a href="#">naislpro_K</a>
+        </div>
+        <div>
+            <img class="picto" src="{{ asset('images/wa.svg') }}">
+            <a href="#">naislpro_K</a>
+        </div>
+    </div>
+    <div>
+
+    </div>
+    <div href="/"><img id="logo" src="{{ asset('images/logo.svg') }}"></div>
+</footer>
 </html>
